# table-analysis-techtest

./: .coverage  .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/table_analyser/: console.py  csv_loader.py  table.py
src/table_analysis/: console.py
src/table_query/: console.py  csv_loader.py  query_helper.py  table.py
tests/: test_console.py  test_csv_loader.py  test_query_helper.py  test_table.py
