[tool.poetry]
name = "bink-python-developer"
version = "0.1.0"
description = "Python developer tech test"
authors = ["Matt <63904102+mattyocode@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "table_analyser", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {version = "^6.3.2", extras = ["toml"]}
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
table-analysis = "table_analysis.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["table_analysis"]

[tool.coverage.report]
fail_under = 95